@@ -1,5 +1,8 @@
 Revision history for XML-Grammar-Fiction.
 
+    * Add t/base/line-iterator-unit.t to provide unit-tests for
+        XML::Grammar::FictionBase::FromProto::Parser::LineIterator .
+
 0.8.0       Wed Jun  8 19:04:57 IDT 2011
     * <blockquote> now supports xml:id and xml:lang.
     * Fiction-Text: a plus sign ( + ) at the starting line of the paragraph
